--- a/css/media.css
+++ b/css/media.css
@@ -1,1 +1,61 @@
-@media (max-width:1550px){html{font-size:15px}.skills{flex-direction:column}.skills__item:not(:first-child){margin-top:.625rem}.info-box-skills{margin-top:1.25rem}}@media (max-width:1250px){html{font-size:12px}.footer__title{display:none}}@media (max-width:900px){.info-box__title{max-width:100px}.portfolio-card{width:80%}.portfolio-card-button{padding:11px}}@media (max-width:600px){.portfolio-buttons{flex-direction:column;align-items:flex-start}.portfolio-buttons__portfolio-button+.portfolio-buttons__portfolio-button{margin:2.5rem 0 0}}@media (max-width:500px){html{font-size:10px}}@media (max-width:400px){.contacts{flex-wrap:wrap;justify-content:flex-start}.contacts__item{margin:1.5rem}}
+@media (max-width: 1550px) {
+  html {
+    font-size: 15px;
+  }
+  .skills {
+    flex-direction: column;
+  }
+  .skills__item:not(:first-child) {
+    margin-top: 0.625rem;
+  }
+  .info-box-skills {
+    margin-top: 1.25rem;
+  }
+}
+
+@media (max-width: 1250px) {
+  html {
+    font-size: 12px;
+  }
+  .footer__title {
+    display: none;
+  }
+}
+
+@media (max-width: 900px) {
+  .info-box__title {
+    max-width: 100px;
+  }
+  .portfolio-card {
+    width: 80%;
+  }
+  .portfolio-card-button {
+    padding: 11px;
+  }
+}
+
+@media (max-width: 600px) {
+  .portfolio-buttons {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .portfolio-buttons__portfolio-button + .portfolio-buttons__portfolio-button {
+    margin: 2.5rem 0 0 0;
+  }
+}
+
+@media (max-width: 500px) {
+  html {
+    font-size: 10px;
+  }
+}
+
+@media (max-width: 400px) {
+  .contacts {
+    flex-wrap: wrap;
+    justify-content: flex-start;
+  }
+  .contacts__item {
+    margin: 1.5rem;
+  }
+}
