--- a/css/style.css
+++ b/css/style.css
@@ -3,12 +3,13 @@
 }
 
 html {
-  font-size: 16px;
+  font-size: .8vmax;
 }
 
 body {
   font-family: 'Poppins', sans-serif;
   color: #1f2024;
+  background-color: #1f2024;
 }
 
 .preloader {
@@ -30,12 +31,12 @@ body {
 }
 
 .preloader__title {
-  font-size: 40px;
+  font-size: 2.5rem;
   color: #1f2024;
 }
 
 .preloader__title + .preloader__title {
-  margin-top: 20px;
+  margin-top: 1.25rem;
 }
 
 .preloader_loaded {
@@ -108,7 +109,7 @@ body {
 }
 
 .menu {
-  height: 150px;
+  height: 130px;
   display: flex;
   align-items: center;
   position: absolute;
@@ -116,7 +117,7 @@ body {
   left: 0;
   right: 0;
   z-index: 4;
-  padding-left: 50px;
+  padding-left: 3.125rem;
 }
 
 .menu__title {
@@ -177,13 +178,13 @@ body {
   width: 100%;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   border-left: 2px solid #8316ff;
-  padding: 20px;
+  padding: 1.25rem;
 }
 
 .portfolio__img {
-  max-width: 50%;
-  width: 100%;
+  width: 50%;
 }
 
 .portfolio:hover .portfolio-info__link {
@@ -195,56 +196,55 @@ body {
 }
 
 .info__portfolio + .info__portfolio {
-  margin: 100px auto 0 auto;
+  margin: 6.25rem auto 0 auto;
 }
 
 .portfolio-info {
-  max-width: 40%;
-  width: 100%;
+  width: 40%;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding: 15px;
+  padding: 0.9375rem;
 }
 
 .portfolio-info__title {
-  font-size: 40px;
+  font-size: 2.5rem;
   margin: 0;
 }
 
 .portfolio-info__descr {
-  font-size: 25px;
-  margin-top: 30px;
+  font-size: 1.5625rem;
+  margin-top: 1.875rem;
 }
 
 .portfolio-info__list {
   list-style-position: inside;
   padding: 0;
-  margin-top: 30px;
+  margin-top: 1.875rem;
 }
 
 .portfolio-info__list-item {
-  font-size: 20px;
+  font-size: 1.25rem;
   text-transform: uppercase;
 }
 
 .portfolio-info__list-item + .portfolio-info__list-item {
-  margin-top: 10px;
+  margin-top: 0.625rem;
 }
 
 .portfolio-info__link {
   text-decoration: none;
   text-transform: uppercase;
-  font-size: 20px;
+  font-size: 1.25rem;
   display: flex;
   justify-content: center;
   align-items: center;
   min-width: 150px;
-  padding: 10px 15px;
+  padding: 0.625rem 0.9375rem;
   background-color: #8316ff;
   color: #fff;
   cursor: pointer;
-  margin-top: 30px;
+  margin-top: 1.875rem;
   transition: .3s ease;
 }
 
@@ -262,7 +262,7 @@ body {
 .footer__title {
   font-size: 20px;
   font-weight: lighter;
-  margin: 0 3.125rem 0 0;
+  margin: 0 50px 0 0;
   color: #1f2024;
   z-index: 2;
 }
